--- a/TABS/www/templates/tabsController.html
+++ b/TABS/www/templates/tabsController.html
@@ -1,7 +1,28 @@
 <ion-view title="Tabs Controller" id="page1" class=" ">
     <ion-tabs class="tabs-stable tabs-icon-top " id="tabsController-tabs1">
-        <ion-tab title="Camera Tab" icon="ion-ios-camera" href="#/page1/page2" id="tabsController-tab1" class=" ">
+        <ion-tab title="Camera Tab" icon="ion-ios-camera" href="#/page1/tab1/page2" id="tabsController-tab1" class=" ">
             <ion-nav-view name="tab1"></ion-nav-view>
+        </ion-tab>
+        <ion-tab title="Camera Tab" icon="ion-ios-camera" href="#/page1/tab5/page2" id="tabsController-tab5" class=" ">
+            <ion-nav-view name="tab5"></ion-nav-view>
+        </ion-tab>
+        <ion-tab title="Camera Tab" icon="ion-ios-camera" href="#/page1/tab6/page2" id="tabsController-tab6" class=" ">
+            <ion-nav-view name="tab6"></ion-nav-view>
+        </ion-tab>
+        <ion-tab title="Camera Tab" icon="ion-ios-camera" href="#/page1/tab7/page2" id="tabsController-tab7" class=" ">
+            <ion-nav-view name="tab7"></ion-nav-view>
+        </ion-tab>
+        <ion-tab title="Camera Tab" icon="ion-ios-camera" href="#/page1/tab8/page2" id="tabsController-tab8" class=" ">
+            <ion-nav-view name="tab8"></ion-nav-view>
+        </ion-tab>
+        <ion-tab title="Camera Tab" icon="ion-ios-camera" href="#/page1/tab9/page2" id="tabsController-tab9" class=" ">
+            <ion-nav-view name="tab9"></ion-nav-view>
+        </ion-tab>
+        <ion-tab title="Camera Tab" icon="ion-ios-camera" href="#/page1/tab10/page2" id="tabsController-tab10" class=" ">
+            <ion-nav-view name="tab10"></ion-nav-view>
+        </ion-tab>
+        <ion-tab title="Camera Tab" icon="ion-ios-camera" href="#/page1/tab11/page2" id="tabsController-tab11" class=" ">
+            <ion-nav-view name="tab11"></ion-nav-view>
         </ion-tab>
         <ion-tab title="Cart Tab" icon="ion-ios-cart" href="#/page1/page3" id="tabsController-tab2" class=" ">
             <ion-nav-view name="tab2"></ion-nav-view>
