--- a/Slides/www/templates/cart.html
+++ b/Slides/www/templates/cart.html
@@ -1,3 +1,3 @@
-<ion-view title="Camera Tab Default Page" id="page2" class=" ">
+<ion-view title="Cart" id="page2" class=" ">
     <ion-content padding="true" class="has-header"></ion-content>
 </ion-view>
