--- a/Slides/www/templates/cloud.html
+++ b/Slides/www/templates/cloud.html
@@ -1,3 +1,3 @@
-<ion-view title="Cart Tab Default Page" id="page3" class=" ">
+<ion-view title="Cloud" id="page3" class=" ">
     <ion-content padding="true" class="has-header"></ion-content>
 </ion-view>
