--- a/Slides/www/templates/home.html
+++ b/Slides/www/templates/home.html
@@ -1,3 +1,3 @@
-<ion-view title="Cloud Tab Default Page" id="page4" class=" ">
+<ion-view title="Home" id="page1" class=" ">
     <ion-content padding="true" class="has-header"></ion-content>
 </ion-view>
