--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -20,14 +20,15 @@
     max-height: 100%;
     bottom: 0;
     left: 0;
-    margin: auto;
+    margin: center;
     overflow: auto;
     position: fixed;
     right: 0;
     top: 0;
 }
-.button {
+.button .button .button-block .button-calm{
     bottom: 0;
+    top: 100;
     position: bottom;
 }
  
