--- a/myApp/www/templates/image-popover.html
+++ b/myApp/www/templates/image-popover.html
@@ -2,7 +2,7 @@
     <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="true" active-slide="activeSlide">
         <ion-slide ng-repeat="image in allImages">
             <img ng-src="{{image.src}}" class="fullscreen-image"/>
-            <button ng-click="testClick()" class="button button-block button-calm">Test Click</button>
+            <button ng-click="testClick()" class="button button-block button-calm">Votar</button>
         </ion-slide>
           
     </ion-slide-box>
