--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -17,7 +17,7 @@
  
 .fullscreen-image {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 60%;
     bottom: 0;
     left: 0;
     margin: center;
@@ -28,7 +28,7 @@
 }
 .button .button .button-block .button-calm{
     bottom: 0;
-    top: 100;
+    top: 100%;
     position: fixed;
 }
  
