--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -18,7 +18,7 @@
 .fullscreen-image {
     max-width: 100%;
     max-height: 60%;
-    bottom: 0;
+    bottom: 20%;
     left: 0;
     margin: center;
     overflow: absolute;
