--- a/myApp/www/templates/image-popover.html
+++ b/myApp/www/templates/image-popover.html
@@ -1,5 +1,5 @@
 <div class="modal image-modal transparent" ng-click="closeModal()">
-    <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="true" active-slide="activeSlide">
+    <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false" active-slide="activeSlide">
         <ion-slide ng-repeat="image in allImages">
             <img ng-src="{{image.src}}" class="fullscreen-image"/>
             <button ng-click="testClick()" class="button button-block button-calm">Votar</button>
