--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -18,10 +18,10 @@
 .fullscreen-image {
     max-width: 100%;
     max-height: 60%;
-    bottom: 20%;
+    bottom:0;
     left: 0;
     margin: center;
-    overflow: absolute;
+    overflow: fixed;
     position: bottom;
     right: 0;
     top: 0;
