--- a/myApp/www/templates/image-popover.html
+++ b/myApp/www/templates/image-popover.html
@@ -1,4 +1,4 @@
-<div class="modal image-modal transparent" ng-click="closeModal()">
+<div class="modal image-modal transparent">
     <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false" active-slide="activeSlide">
         <ion-slide ng-repeat="image in allImages">
             <img ng-src="{{image.src}}" class="fullscreen-image"/>
