--- a/Slides/www/templates/home.html
+++ b/Slides/www/templates/home.html
@@ -1,3 +1,19 @@
 <ion-view title="Home" id="page1" class=" ">
-    <ion-content padding="true" class="has-header"></ion-content>
+    <ion-content padding="true" class="has-header" ng-controller="MediaCtrl">
+    <div class="item item-divider">
+        <i class="ion-images"></i>
+        Imagenes de las obras
+    </div>
+
+    <a class="item item-list-detail">
+        <ion-scroll direction="x">
+            <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
+        </ion-scroll>
+    </a>
+        <div class="spacer" style="height: 100px;"></div>
+        <div class="spacer" style="height: 100px;"></div>
+        <div class="spacer" style="height: 100px;"></div>
+        <img class="footer" src="img/pie-de-pagina.png" style="position: bottom; width: 100%"/>
+      </ion-content>
+    </ion-content>
 </ion-view>
