--- a/Slides/www/templates/home.html
+++ b/Slides/www/templates/home.html
@@ -1,13 +1,18 @@
-<ion-view title="Home" id="Index">
+<ion-view title="Inicio" id="Index">
     <ion-pane>
-      <ion-content class="has-header padding" ng-controller="homeCtrl">
-
+      <ion-content class="has-header padding" ng-controller="homeCtrl" style="background-color: #393E80;">  
+       
+       <div>
+           <img src="img/imagen-pantalla1.png" style="heigt: 100%; width: 100%;">
+       </div>
+       
         <div class="item item-divider">
+            
             <i class="ion-images"></i>
-            Imagenes de las obras
+            Galeria
         </div>
 
-        <a class="item item-list-detail">
+        <a class="item item-list-detail transparent">
             <ion-scroll direction="x">
                 <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
             </ion-scroll>
