--- a/Slides/www/templates/menu.html
+++ b/Slides/www/templates/menu.html
@@ -14,7 +14,7 @@
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header">
             <ion-list id="menu-null" class=" ">
-                <ion-item id="menu-list-item1" ui-sref="menu.home" menu-close="" class="  ">Home</ion-item>
+                <ion-item id="menu-list-item1" ui-sref="menu.home" menu-close="" class="  ">Inicio</ion-item>
                 <ion-item id="menu-list-item2" ui-sref="menu.cart" menu-close="" class="  ">Cart</ion-item>
                 <ion-item id="menu-list-item3" ui-sref="menu.cloud" menu-close="" class="  ">Cloud</ion-item>
             </ion-list>
