--- a/Slides/www/templates/home.html
+++ b/Slides/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view title="Inicio" id="Index">
+<ion-view title="Inicio" id="home">
     <ion-pane>
       <ion-content class="has-header padding" ng-controller="homeCtrl" style="background-color: #393E80;">  
        
