--- a/Slides/www/templates/cart.html
+++ b/Slides/www/templates/cart.html
@@ -1,3 +1,30 @@
-<ion-view title="Cart" id="page2" class=" ">
-    <ion-content padding="true" class="has-header"></ion-content>
+<ion-view title="Musica" id="page2" class=" ">
+    <ion-pane>
+      <ion-content class="has-header padding" ng-controller="homeCtrl" style="background-color: #F8B451;">  
+       
+       <div>
+           <img src="img/musica.jpg" style="heigt: 50%; width: 50%; align: left; vertical-align: text-top; float: left;"><p>La convocatoria apunta a que las propuestas recurran y den 
+               cuenta de los más diversos abordajes musicales. 
+               En la presente edición, y en virtud de contemplar una mayor 
+               amplitud del campo musical, no sólo se pueden presentar los 
+               géneros habituales, sino que también serán consideradas todas 
+               aquellas producciones creadas a partir de los diversos códigos  
+               y géneros de la expresión musical, de su fusión y su 
+               transversalidad.</p>
+       </div>
+       
+        <div class="item item-divider">
+            
+            <i class="ion-images"></i>
+            Galeria
+        </div>
+
+        <a class="item item-list-detail transparent">
+            <ion-scroll direction="x">
+                <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
+            </ion-scroll>
+        </a>
+
+      </ion-content>
+    </ion-pane>
 </ion-view>
