--- a/Slides/www/templates/cart.html
+++ b/Slides/www/templates/cart.html
@@ -3,7 +3,7 @@
       <ion-content class="has-header padding" ng-controller="homeCtrl" style="background-color: #F8B451;">  
        
        <div>
-           <img src="img/musica.jpg" style="heigt: 50%; width: 50%; align: left; vertical-align: text-top; float: left;"><p>La convocatoria apunta a que las propuestas recurran y den 
+           <img src="img/musica.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;"><p align="justify">La convocatoria apunta a que las propuestas recurran y den 
                cuenta de los más diversos abordajes musicales. 
                En la presente edición, y en virtud de contemplar una mayor 
                amplitud del campo musical, no sólo se pueden presentar los 
