--- a/Slides/www/templates/home.html
+++ b/Slides/www/templates/home.html
@@ -3,7 +3,12 @@
       <ion-content class="has-header padding" ng-controller="homeCtrl" style="background-color: #393E80;">  
        
        <div>
-           <img src="img/imagen-pantalla1.png" style="heigt: 100%; width: 100%;">
+           <a class="item-list-detail transparent">
+           <ion-scroll direction="x">
+            <img ng-repeat="image in Images" style="heigt: 100%; width: 100%;" ng-src="{{image.src}}" class="image-list"/>
+            <!--<img src="img/imagen-pantalla1.png" >-->
+           </ion-scroll>
+           </a>
        </div>
        
         <div class="item item-divider">
