--- a/Slides/www/templates/cart.html
+++ b/Slides/www/templates/cart.html
@@ -16,7 +16,7 @@
         <div class="item item-divider">
             
             <i class="ion-images"></i>
-            Artistas / Puede votar por su artista favorito
+            <b>Artistas</b>/Puede votar por su artista favorito
         </div>
 
         <a class="item item-list-detail transparent">
