--- a/Slides/www/templates/menu.html
+++ b/Slides/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="true">
     <ion-side-menu-content>
         <ion-nav-bar class="bar-stable">
             <ion-nav-back-button></ion-nav-back-button>
@@ -16,7 +16,8 @@
             <ion-list id="menu-null" class=" ">
                 <ion-item id="menu-list-item1" ui-sref="menu.home" menu-close="" class="  ">Inicio</ion-item>
                 <ion-item id="menu-list-item2" ui-sref="menu.cart" menu-close="" class="  ">Musica</ion-item>
-                <ion-item id="menu-list-item3" ui-sref="menu.cloud" menu-close="" class="  ">Cloud</ion-item>
+                <ion-item id="menu-list-item3" ui-sref="menu.cloud" menu-close="" class="  ">Audio/Visuales</ion-item>
+                <ion-item id="menu-list-item4" ui-serf="menu.letras" menu-close="" class="  ">Letras</ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
