--- a/Slides/www/templates/audioVisuales.html
+++ b/Slides/www/templates/audioVisuales.html
@@ -1,8 +1,7 @@
-<ion-view title="AudioVisuales" id="page3" class=" ">
+<ion-view title="Audio/Visuales" id="page3" class=" ">
     <ion-pane>
-      <ion-content class="has-header padding" ng-controller="homeCtrl" style="background-color: #ED7635;">  
-       
-       <div>
+        <ion-content padding="true" class="has-header">
+            <div>
            <img src="img/audiovisuales.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;">
            <p align="justify">En el área se podrán presentar no sólo los géneros más habituales como ficción, documental, 
                animación, experimental, etc., sino también todas aquellas producciones que son creadas a través de los 
@@ -21,7 +20,6 @@
                 <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
             </ion-scroll>
         </a>
-
-      </ion-content>
+        </ion-content>
     </ion-pane>
 </ion-view>
