--- a/Slides/www/templates/menu.html
+++ b/Slides/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="true">
+<ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
         <ion-nav-bar class="bar-stable">
             <ion-nav-back-button></ion-nav-back-button>
@@ -13,11 +13,13 @@
             <div class="title">Menu</div>
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header">
-            <ion-list id="menu-null" class=" ">
-                <ion-item id="menu-list-item1" ui-sref="menu.home" menu-close="" class="  ">Inicio</ion-item>
-                <ion-item id="menu-list-item2" ui-sref="menu.cart" menu-close="" class="  ">Musica</ion-item>
-                <ion-item id="menu-list-item3" ui-sref="menu.cloud" menu-close="" class="  ">Audio/Visuales</ion-item>
-                <ion-item id="menu-list-item4" ui-serf="menu.letras" menu-close="" class="  ">Letras</ion-item>
+            <ion-list id="menu-list1" class=" ">
+                <ion-item id="menu-list-item1" ui-sref="inicio" menu-close="" class="  ">Inicio</ion-item>
+                <ion-item id="menu-list-item2" ui-sref="menu.musica" menu-close="" class="  ">Musica</ion-item>
+                <ion-item id="menu-list-item3" ui-sref="menu.audioVisuales" menu-close="" class="  ">Audio/Visuales</ion-item>
+                <ion-item id="menu-list-item4" class="  ">Letras</ion-item>
+                <ion-item id="menu-list-item5" ui-sref="menu.visuales" menu-close="" class="  ">Visuales</ion-item>
+                <ion-item id="menu-list-item6" ui-sref="menu.escenicas" menu-close="" class="  ">Escenicas</ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
