--- a/Slides/www/templates/musica.html
+++ b/Slides/www/templates/musica.html
@@ -1,8 +1,7 @@
 <ion-view title="Musica" id="page2" class=" ">
     <ion-pane>
-      <ion-content class="has-header padding" ng-controller="homeCtrl" style="background-color: #F8B451;">  
-       
-       <div>
+        <ion-content padding="true" class="has-header">
+          <div>
            <img src="img/musica.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;"><p align="justify">La convocatoria apunta a que las propuestas recurran y den 
                cuenta de los más diversos abordajes musicales. 
                En la presente edición, y en virtud de contemplar una mayor 
@@ -23,8 +22,7 @@
             <ion-scroll direction="x">
                 <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
             </ion-scroll>
-        </a>
-
-      </ion-content>
+        </a>  
+        </ion-content>
     </ion-pane>
 </ion-view>
