--- a/sideMenu/www/templates/inicio.html
+++ b/sideMenu/www/templates/inicio.html
@@ -1,4 +1,4 @@
-<ion-view title="Inicio" id="page1" class=" ">
+<ion-view title="12° Bienal de Arte Joven" id="page1" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="inicioCtrl" style="background-color: #393E80;">
         <div>
            <a class="item item-list-detail transparent">
