--- a/sideMenu/www/templates/escenicas.html
+++ b/sideMenu/www/templates/escenicas.html
@@ -1,5 +1,12 @@
 <ion-view title="Escenicas" id="page6" class=" ">
-    <ion-content padding="true" class="has-header" ng-controller="inicioCtrl" style="background-color: #EA5A57;">
+    <ion-content padding="true" class="has-header" ng-controller="escenicasCtrl" style="background-color: #EA5A57;">
+        <div>
+           <a class="item item-list-detail transparent">
+           <ion-scroll direction="x">
+            <img ng-repeat="image in aImages" style="heigt: 381px; width: 100%;" ng-src="{{image.src}}" ng-click="createCalendarEvent($index)" class="image-list"/>
+           </ion-scroll>
+           </a>
+	    </div>
         <div>
            <img src="img/escenicas.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;">
            <p align="justify">La convocatoria se dirige a la búsqueda de nuevos paradigmas en el campo escénico. 
