--- a/sideMenu/www/templates/letras.html
+++ b/sideMenu/www/templates/letras.html
@@ -1,5 +1,12 @@
 <ion-view title="Letras" id="page4" class=" ">
-    <ion-content padding="true" class="has-header" ng-controller="inicioCtrl" style="background-color: #00A880;">
+    <ion-content padding="true" class="has-header" ng-controller="letrasCtrl" style="background-color: #00A880;">
+        <div>
+           <a class="item item-list-detail transparent">
+           <ion-scroll direction="x">
+            <img ng-repeat="image in aImages" style="heigt: 381px; width: 100%;" ng-src="{{image.src}}" ng-click="createCalendarEvent($index)" class="image-list"/>
+           </ion-scroll>
+           </a>
+	    </div>
         <div>
            <img src="img/LETRAS.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;">
            <p align="justify">Se busca que los trabajos presentados puedan dar cuenta de los diversos géneros y soportes
