--- a/sideMenu/www/templates/visuales.html
+++ b/sideMenu/www/templates/visuales.html
@@ -1,5 +1,12 @@
 <ion-view title="Visuales" id="page5" class=" ">
-    <ion-content padding="true" class="has-header"ng-controller="inicioCtrl" style="background-color: #393E80;">
+    <ion-content padding="true" class="has-header" ng-controller="visualesCtrl" style="background-color: #393E80;">
+        <div>
+           <a class="item item-list-detail transparent">
+           <ion-scroll direction="x">
+            <img ng-repeat="image in aImages" style="heigt: 381px; width: 100%;" ng-src="{{image.src}}" ng-click="createCalendarEvent($index)" class="image-list"/>
+           </ion-scroll>
+           </a>
+	    </div>
        <div>
            <img src="img/VISUALES.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;">
            <p align="justify">La convocatoria se dirige especialmente a los jóvenes
