correccion de pantallas
correccion voto de pantallas

--- a/sideMenu/www/templates/image-popover.html
+++ b/sideMenu/www/templates/image-popover.html
@@ -1,4 +1,4 @@
-<ion-view title="Artista/Obra" id="" class=" ">
+<ion-content title="Artista/Obra" padding="true" class="has-header" style="background-color: #F8B451;">
 <div class="modal image-modal">
     <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false" active-slide="activeSlide">
         <ion-slide ng-repeat="image in allImages">
@@ -9,4 +9,4 @@
           
     </ion-slide-box>
 </div>
-</ion-view>
+</ion-content>
