--- a/sideMenu/www/templates/inicio.html
+++ b/sideMenu/www/templates/inicio.html
@@ -11,13 +11,13 @@
         <div class="item item-divider">
             
             <i class="ion-images"></i>
-            Galeria
+            <b>Artistas</b>/Puede votar por su artista favorito
         </div>
 
         <a class="item item-list-detail transparent">
             <ion-scroll direction="x">
                 <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
             </ion-scroll>
-        </a>
+        </a>  
         </ion-content>
 </ion-view>
