--- a/sideMenu/www/templates/inicio.html
+++ b/sideMenu/www/templates/inicio.html
@@ -1,23 +1,12 @@
 <ion-view title="12° Bienal de Arte Joven" id="page1" class=" ">
-    <ion-content padding="true" class="has-header" ng-controller="inicioCtrl" style="background-color: #393E80;">
-        <div>
-           <a class="item item-list-detail transparent">
-           <ion-scroll direction="x">
-            <img ng-repeat="image in aImages" style="heigt: 381px; width: 100%;" ng-src="{{image.src}}" class="image-list"/>
-           </ion-scroll>
-           </a>
-       </div>
-       
-        <div class="item item-divider">
-            
-            <i class="ion-images"></i>
-            <b>Artistas</b>/Puede votar por su artista favorito
-        </div>
-
-        <a class="item item-list-detail transparent">
-            <ion-scroll direction="x">
-                <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
-            </ion-scroll>
-        </a>  
-        </ion-content>
+	<ion-content padding="true" class="has-header" ng-controller="inicioCtrl" style="background-color: #393E80;">
+		<div>
+		   <a class="item transparent">
+			<img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" class="image-list"/><br>
+			<img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" class="image-list"/><br>
+			<img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" class="image-list"/><br>
+			<img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" class="image-list"/><br>
+		   </a>
+	   </div>
+	</ion-content>
 </ion-view>
