--- a/sideMenu/www/templates/menu.html
+++ b/sideMenu/www/templates/menu.html
@@ -9,10 +9,8 @@
         <ion-nav-view name="side-menu21"></ion-nav-view>
     </ion-side-menu-content>
     <ion-side-menu side="left" id="side-menu21">
-        <ion-header-bar class="bar-stable">
-            <div class="title">Menu</div>
-        </ion-header-bar>
-        <ion-content padding="false" class="side-menu-left has-header">
+        <ion-content padding="false" class="side-menu-left ">
+            <img src="img/screen.png" width="100%" height="50%">
             <ion-list id="menu-list1" class=" ">
                 <ion-item id="menu-list-item1" ui-sref="menu.inicio" menu-close="" class="  ">Inicio</ion-item>
                 <ion-item id="menu-list-item2" ui-sref="menu.musica" menu-close="" class="  ">Musica</ion-item>
@@ -20,6 +18,9 @@
                 <ion-item id="menu-list-item4" ui-sref="menu.letras" menu-close="" class="  ">Letras</ion-item>
                 <ion-item id="menu-list-item5" ui-sref="menu.visuales" menu-close="" class="  ">Visuales</ion-item>
                 <ion-item id="menu-list-item6" ui-sref="menu.escenicas" menu-close="" class="  ">Escenicas</ion-item>
+                <ion-item id="menu-list-item7" ui-sref="menu.youtube" menu-close="" class=" ">Transmision en vivo</ion-item>
+                <ion-item id="menu-list-item8" ui-sref="menu.votos" menu-close="" class=" ">Votar</ion-item>
+                <ion-item id="menu-list-item9" ui-sref="menu.vMusica" menu-close="" class=" ">Voto Musica</ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
