--- a/sideMenu/www/templates/musica.html
+++ b/sideMenu/www/templates/musica.html
@@ -1,17 +1,18 @@
 <ion-view title="Musica" id="page2" class=" ">
-<<<<<<< HEAD
     <ion-content padding="true" class="has-header" ng-controller="musicaCtrl" style="background-color: #F8B451;">
         <div>
-           <a class="item item-list-detail transparent">
-           <ion-scroll direction="x">
-            <img ng-repeat="image in aImages" style="heigt: 381px; width: 100%;" ng-src="{{image.src}}" ng-click="createCalendarEvent($index)" class="image-list"/>
-           </ion-scroll>
+           <a class="item transparent">
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(4)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(7)" class="image-list"/><br>
            </a>
        </div>
 
-=======
-    <ion-content padding="true" class="has-header" ng-controller="inicioCtrl" style="background-color: #F8B451;">
->>>>>>> parent of 3e08ee6... pantalla popup para agregar evento a calendario
         <div>
            <img src="img/musica.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;"><p align="justify">La convocatoria apunta a que las propuestas recurran y den 
                cuenta de los más diversos abordajes musicales. 
@@ -22,17 +23,5 @@
                y géneros de la expresión musical, de su fusión y su 
                transversalidad.</p>
        </div>
-       
-        <div class="item item-divider">
-            
-            <i class="ion-images"></i>
-            <b>Artistas</b>/Puede votar por su artista favorito
-        </div>
-
-        <a class="item item-list-detail transparent">
-            <ion-scroll direction="x">
-                <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
-            </ion-scroll>
-        </a>  
         </ion-content>
 </ion-view>
