--- a/sideMenu/www/templates/visuales.html
+++ b/sideMenu/www/templates/visuales.html
@@ -1,10 +1,15 @@
 <ion-view title="Visuales" id="page5" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="visualesCtrl" style="background-color: #393E80;">
         <div>
-           <a class="item item-list-detail transparent">
-           <ion-scroll direction="x">
-            <img ng-repeat="image in aImages" style="heigt: 381px; width: 100%;" ng-src="{{image.src}}" ng-click="createCalendarEvent($index)" class="image-list"/>
-           </ion-scroll>
+           <a class="item transparent">
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(4)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(7)" class="image-list"/><br>
            </a>
 	    </div>
        <div>
@@ -19,17 +24,5 @@
                                 campo de expresiones visuales los soportes, contenidos,
                                 técnicas y temáticas son libres.</p>
        </div>
-       
-        <div class="item item-divider">
-            
-            <i class="ion-images"></i>
-            <b>Artistas</b>/Puede votar por su artista favorito
-        </div>
-
-        <a class="item item-list-detail transparent">
-            <ion-scroll direction="x">
-                <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
-            </ion-scroll>
-        </a>  
         </ion-content>
 </ion-view>
