modificacion services para mongodb

--- a/Bienal/www/templates/vAV.html
+++ b/Bienal/www/templates/vAV.html
@@ -1,5 +1,5 @@
 <ion-view title="Voto AudioVisuales" id="page10" class=" ">
-    <ion-content padding="true" class="has-header" ng-controller="vAV" style="background-color: #ED7635;">
+    <ion-content padding="true" class="has-header" ng-controller="vAVCtrl" style="background-color: #ED7635;">
         <div>
         <img src="img/bannerav.png" style="heigt: 100%; width: 100%">
            <a class="item item-list-detail transparent">
