listas pantallas votacion, mañana sigo

--- a/Bienal/www/templates/audioVisuales.html
+++ b/Bienal/www/templates/audioVisuales.html
@@ -1,7 +1,6 @@
 <ion-view title="Audio/Visuales" id="page3" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="audioVisualesCtrl" style="background-color: #ED7635;">
         <div>
-           <a class="item transparent">
             <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
@@ -10,10 +9,9 @@
             <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(7)" class="image-list"/><br>
-           </a>
        </div>
          <div>
-           <img src="img/audiovisuales.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;">
+           <img ng-src="img/audiovisuales.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;">
            <p align="justify">En el área se podrán presentar no sólo los géneros más habituales como ficción, documental, 
                animación, experimental, etc., sino también todas aquellas producciones que son creadas a través de los 
                distintos códigos de la expresión audiovisual y de su transversalidad como instalaciones multimediales, VJ, 
