--- a/Bienal/www/templates/inicio.html
+++ b/Bienal/www/templates/inicio.html
@@ -1,10 +1,8 @@
 <ion-view title="12° Bienal de Arte Joven" id="page1" class=" ">
 	<ion-content padding="true" class="has-header" ng-controller="inicioCtrl" style="background-color: #393E80;">
-		<div>
-			<a class="item item-list-detail transparent">
-					<img style="heigt: 381px; width: 100%;" src="img/cr.png" />
+				<img style="heigt: 381px; width: 100%;" ng-src="img/cr.png" />
 					<br>
-					<img style="heigt: 381px; width: 100%;" src="img/ptepta.png" />
+				<img style="heigt: 381px; width: 100%;" ng-src="img/ptepta.png" />
 
 				<div>
 					<p align="justify">La convocatoria apunta a que las propuestas recurran y den 
@@ -16,7 +14,5 @@
 						y géneros de la expresión musical, de su fusión y su 
 						transversalidad.</p>
        			</div>
-			</a>
-	   </div>
 	</ion-content>
 </ion-view>
