--- a/Bienal/www/templates/vAV.html
+++ b/Bienal/www/templates/vAV.html
@@ -1,7 +1,7 @@
 <ion-view title="Voto AudioVisuales" id="page10" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="vAVCtrl" style="background-color: #ED7635;">
         <div>
-        <img src="img/bannerav.png" style="heigt: 100%; width: 100%">
+        <img ng-src="img/bannerav.png" style="heigt: 100%; width: 100%">
            <a class="item item-list-detail transparent">
             <form name="AV">
                     <ion-radio ng-repeat="item in serverSideList"
