--- a/Bienal/www/templates/vLetras.html
+++ b/Bienal/www/templates/vLetras.html
@@ -1,8 +1,8 @@
-<ion-view title="Voto Musica" id="page9" class=" ">
-    <ion-content padding="true" class="has-header" ng-controller="vMusicaCtrl" style="background-color: #F8B451;">
-        <img ng-src="img/bannermusica.png" style="heigt: 100%; width: 100%">
+<ion-view title="Voto Letras" id="page11" class=" ">
+    <ion-content padding="true" class="has-header" ng-controller="vLetrasCtrl" style="background-color: #00A880;">
+        <img ng-src="img/bannerletras.png" style="heigt: 100%; width: 100%">
 
-              <form name="Musica">
+              <form name="Letras">
                     </ion-header-bar>
                     <ion-radio ng-repeat="item in serverSideList"
                             ng-value="item.value"
@@ -13,4 +13,4 @@
                     </ion-radio>
             </form>
     </ion-content>
-</ion-view>     
+</ion-view>   
