--- a/Bienal/www/css/style.css
+++ b/Bienal/www/css/style.css
@@ -63,7 +63,9 @@
     padding-top: 30px; height: 0; overflow: hidden;
 }
  
-.video-container iframe, .video-container object, .video-container embed {
+.video-container iframe,
+.video-container object,
+.video-container embed {
     position: absolute;
     top: 0;
     left: 0;
